==> anuraj-rp/zephyr-doom/doom-esp32s3/prboom-esp32-compat/spi_lcd.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "zephyr/kernel.h"
#include <zephyr/kernel.h>
#include <zephyr/device.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/spi.h>
#include <hal/spi_hal.h>
#include "spi_lcd.h"
#define SPI_OP SPI_OP_MODE_MASTER | SPI_MODE_CPOL | SPI_MODE_CPHA | SPI_WORD_SET(8) | SPI_LINES_SINGLE
#define PIN_NUM_MISO 25
#define PIN_NUM_MOSI 23
#define PIN_NUM_CLK  19
#define PIN_NUM_CS   22
#define PIN_NUM_DC   21
#define PIN_NUM_RST  18
#define PIN_NUM_BCKL 5
#define PIN_NUM_MOSI CONFIG_HW_LCD_MOSI_GPIO
#define PIN_NUM_MISO CONFIG_HW_LCD_MISO_GPIO
#define PIN_NUM_CLK  CONFIG_HW_LCD_CLK_GPIO
#define PIN_NUM_CS   CONFIG_HW_LCD_CS_GPIO
#define PIN_NUM_DC   CONFIG_HW_LCD_DC_GPIO
#define PIN_NUM_RST  CONFIG_HW_LCD_RESET_GPIO
#define PIN_NUM_BCKL CONFIG_HW_LCD_BL_GPIO
#define DOUBLE_BUFFER
#define CONFIG_HW_LCD_TYPE 0

void ili_cmd(const struct device* spidevp, const struct spi_buf *buffer) 
{
    tx_buffer.buffers = buffer;
    tx_buffer.count = 1;
    uint8_t ret;
    ret = gpio_pin_set_raw(gpio_dev_p, ILI9341_DC, ILI9341_CMD);
    ret |= spi_write(spidevp, &spi_cfg, &tx_buffer);
    __ASSERT(ret == 0, "SPI Write Failed");
}

void spi_lcd_init() {
	printf("spi_lcd_init()\n");

#ifdef DOUBLE_BUFFER
    currFbPtr = k_malloc(320*240);        
#endif
    k_thread_create(&displaythread_data, displaythread_stack,
                    K_THREAD_STACK_SIZEOF(displaythread_stack),
                    displayTask, NULL, NULL, NULL,
                    5, 0, K_FOREVER);
    k_thread_name_set(&displaythread_data, "display_thread");
    //k_thread_cpu_pin(&displaythread_data, 1); //Pin to core 1
    k_thread_start(&displaythread_data);

    k_thread_create(&iliTransferthread_data, iliTransferthread_stack,
                K_THREAD_STACK_SIZEOF(iliTransferthread_stack),
                iliTransferTask, NULL, NULL, NULL,
                5, 0, K_FOREVER);
    k_thread_name_set(&iliTransferthread_data, "iliTransfer_thread");
    //k_thread_cpu_pin(&displaythread_data, 1); //Pin to core 1
    k_thread_start(&iliTransferthread_data);
}

void ili_data(const struct device* spidevp, uint8_t *data, int len) 
{
    struct spi_buf databuf;
    databuf.buf = data;
    databuf.len = len;

    tx_buffer.buffers = &databuf;
    tx_buffer.count = 1;

    uint8_t ret;
    ret = gpio_pin_set_raw(gpio_dev_p, ILI9341_DC, ILI9341_DATA); 
    ret |= spi_write(spidevp, &spi_cfg, &tx_buffer);
    __ASSERT(ret == 0, "SPI Write Failed");
}

void ili_init(const struct device* spidevp) 
{
    int cmd=0;

    //Reset the display
    gpio_pin_set_raw(gpio_dev_p, ILI9341_RESET, 0);
    k_usleep(100);
    gpio_pin_set_raw(gpio_dev_p, ILI9341_RESET, 1);
    k_usleep(100);

    //Send all the commands
    while (ili_init_cmds[cmd].databytes!=0xff) {
        uint8_t cmdbuf;
        cmdbuf = ili_init_cmds[cmd].cmd;
        struct spi_buf spi_buf_ilicmd = {.buf = &cmdbuf, .len = 1};
        ili_cmd(spidevp, &spi_buf_ilicmd);
        uint8_t dmdata[16]; //This is to be used with DMA later
        memcpy(dmdata, ili_init_cmds[cmd].data, 16);
        //struct spi_buf spi_buf_ilidata = {.buf = &dmdata, .len = (ili_init_cmds[cmd].databytes & 0x1F)};
        ili_data(spidevp, dmdata, (ili_init_cmds[cmd].databytes & 0x1F));
        if (ili_init_cmds[cmd].databytes&0x80) {
            k_usleep(500);
        }
        cmd++;
    }

    ///Enable backlight
#if CONFIG_HW_INV_BL
    //gpio_set_level(PIN_NUM_BCKL, 0);
#else
    //gpio_set_level(PIN_NUM_BCKL, 1);
#endif

}

void displayTask(void *dummy1, void *dummy2, void *dummy3)
{
	ARG_UNUSED(dummy1);
	ARG_UNUSED(dummy2);
	ARG_UNUSED(dummy3);
    int x,i;
    int idx = 0;
    static uint16_t *dmamem;
    static struct spi_buf spi_disp_buf;

    printf("Starting Display Task\n");
    //Initialize the LCD
    ili_init(spi_dev_p);
    dmamem = k_malloc(MEM_PER_TRANS*2);
    spi_disp_buf.buf = &dmamem;
    spi_disp_buf.len = MEM_PER_TRANS*2;

    //k_sem_give(&dispDoneSem);
    while(1)
    {
        //k_sem_take(&dispSem, K_FOREVER);
        if(idx % 4 == 0)
        {
            printf("Display Task Frame\n");
        }
        //send_header_start(spi_dev_p, 0, 0, 320, 240);
        //send_header_cleanup(spi_dev_p);

        for(x = 0; x<320*240; x+=MEM_PER_TRANS)
        {
            // for(i = 0; i<MEM_PER_TRANS; i+=4)
            // {
			// 	uint32_t d=currFbPtr[(x+i)/4];
			// 	dmamem[i+0]=lcdpal[(d>>0)&0xff];
			// 	dmamem[i+1]=lcdpal[(d>>8)&0xff];
			// 	dmamem[i+2]=lcdpal[(d>>16)&0xff];
			// 	dmamem[i+3]=lcdpal[(d>>24)&0xff];                
            // }

            // ili_data(spi_dev_p, (uint8_t *)dmamem, MEM_PER_TRANS*16);
#ifndef DOUBLE_BUFFER
		    xSemaphoreGive(dispDoneSem);
#endif  
        }
        idx++;
        k_msleep(50);
    }
}
